@@ -48,7 +48,7 @@ gmp_vsscanf (const char *s, const char *fmt, va_list ap)
   char   *alloc;
   int    ret;
   size = strlen (s) + 1;
-  alloc = (char *) (*__gmp_allocate_func) (size);
+  alloc = __GMP_ALLOCATE_FUNC_TYPE (size, char);
   memcpy (alloc, s, size);
   s = alloc;
   ret = __gmp_doscan (&__gmp_sscanf_funs, (void *) &s, fmt, ap);
